# SkillBox

./: .gitignore  SkillBox.sln
SkillBox/: SkillBox.sln
m12t1/: m12t1.cpp  m12t1.vcxproj  m12t1.vcxproj.filters
m12t2/: m12t2.cpp  m12t2.vcxproj  m12t2.vcxproj.filters
m12t3/: m12t3.cpp  m12t3.vcxproj  m12t3.vcxproj.filters
m13t1/: m13t1.cpp
m13t2/: m13t2.cpp
m13t3/: m13t3.cpp
m14t1/: m14t1.cpp
m14t2/: m14t2.cpp
m14t3/: m14t3.cpp
m14t4/: m14t4.cpp
m14t5/: m14t5.cpp
m14t6/: m14t6.cpp
m14t7/: m14t7.cpp
m14t8/: m14t8.cpp
m14t9/: m14t9.cpp
m15t1/: m15t1.cpp
m15t2/: m15t2.cpp
m15t3/: m15t3.cpp
m15t4/: m15t4.cpp
m16t1/: m16t1.cpp
m16t2/: m16t2.cpp
m16t3/: m16t3.cpp
m16t4/: m16t4.cpp
m16t5/: m16t5.cpp
m17t1/: m17t1.cpp
m17t2/: m17t2.cpp
m17t3/: m17t3.cpp
m18t1/: m18t1.cpp
m18t2/: m18t2.cpp
m18t3/: m18t3.cpp
m18t4/: m18t4.cpp
m19t1/: m19t1.cpp  words.txt
m19t2/: m19t2.cpp
m19t3/: m19t3.cpp
m19t4/: m19t4.cpp  test.txt
m19t5/: m19t5.cpp
m20t1/: m20t1.cpp  pay.txt
m20t2/: m20t2.cpp  pic.txt
m20t3/: m20t3.cpp
m20t4/: m20t4.cpp
m21t1/: m21t1.cpp
m21t2/: m21t2.cpp
m21t3/: m21t3.cpp
m21t4/: m21t4.cpp
m22t1/: m22t1.cpp
m22t2/: m22t2.cpp
m22t3/: m22t3.cpp
m23t1/: m23t1.cpp
m23t2/: m23t2.cpp
m23t3/: m23t3.cpp
m24t1/: m24t1.cpp
m24t2/: m24t2.cpp
m25t1/: CMakeLists.txt  m25t1.cpp  m25t1.h
m25t2/: CMakeLists.txt  cpu.cpp  cpu.h  disk.cpp  kbd.cpp  kbd.h  main.cpp
m25t2/include/: disk.h  gpu.h  ram.h
m25t2/src/: CMakeLists.txt  gpu.cpp  ram.cpp
m26t1/: m26t1.cpp
m26t2/: m26t2.cpp
m26t3/: m26t3.cpp
m27t1/: m27t1.cpp
m27t2/: m27t2.cpp
m27t3/: m27t3.cpp
m28t1/: m28t1.cpp
m28t2/: m28t2.cpp
m28t3/: m28t3.cpp
m29t1/: m29t1.cpp  m29t1.vcxproj  m29t1.vcxproj.filters
m30t1/: CMakeLists.txt  m30t1.cpp
m30t2/: CMakeLists.txt  m30t2.cpp
m30t3/: CMakeLists.txt  m30t3.cpp
m31t1/: m31t1.cpp  m31t1.vcxproj  m31t1.vcxproj.filters
m31t2/: m31t2.cpp  m31t2.vcxproj  m31t2.vcxproj.filters
m32t1/: cinema.json
m32t2/: m32t2.cpp
m32t3/: factory.pb.cc  factory.pb.h  (+1 more)
m34t1/: CMakeLists.txt  m34t1.cpp  m34t1.h
(+65 files in other folders)
