# CMakeList.txt: проект CMake для m25t1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("m25t1")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (m25t1 m25t1.cpp m25t1.h)

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
